update home page

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,12 +1,7 @@
 {
   "404.message": "You just hit a route that doesn't exist... the sadness.",
   "404.title": "404: Not found",
-  "home.gobuild": "Now go build something great.",
-  "home.greeting": "Hi people",
-  "home.link-page2": "Go to page 2",
-  "home.link-photos": "Go to photos",
   "home.pagetitle": "Home",
-  "home.welcome": "Welcome to your new Gatsby site.",
   "language.selector.label": "Select another available language",
   "language.selector.option.english": "English",
   "language.selector.option.portuguese": "Portuguese",
@@ -20,5 +15,6 @@
   "photo.return-to-photos": "Return to photos",
   "photos.loading": "Loading...",
   "photos.loadmore": "Load more",
-  "photos.pagetitle": "Photos"
+  "photos.pagetitle": "Photos",
+  "who.i.am": "I'm a mad computer scientist, but with bachelor's degree \\o/"
 }
