--- a/src/assets/languages/whitelists/whitelist_en.json
+++ b/src/assets/languages/whitelists/whitelist_en.json
@@ -13,11 +13,7 @@
   "404.title",
   "404.message",
   "home.pagetitle",
-  "home.greeting",
-  "home.welcome",
-  "home.gobuild",
-  "home.link-page2",
-  "home.link-photos",
+  "who.i.am",
   "page2.title",
   "page2.welcome",
   "page2.link"
