--- a/src/assets/languages/pt.json
+++ b/src/assets/languages/pt.json
@@ -1,12 +1,7 @@
 {
   "404.message": "Você acabou de acertar uma rota que não existe... lamento.",
   "404.title": "404: Não encontrado...",
-  "home.gobuild": "Agora vá construir algo ótimo.",
-  "home.greeting": "Olá pessoal",
-  "home.link-page2": "Vá para a página 2",
-  "home.link-photos": "Ir para fotos",
   "home.pagetitle": "Home",
-  "home.welcome": "Bem-vindo ao seu novo site do Gatsby.",
   "language.selector.label": "Selecione outro idioma disponível",
   "language.selector.option.english": "Inglês",
   "language.selector.option.portuguese": "Português",
@@ -20,5 +15,6 @@
   "photo.return-to-photos": "Retornar para fotos",
   "photos.loading": "Carregando...",
   "photos.loadmore": "Carregar mais",
-  "photos.pagetitle": "Fotos"
+  "photos.pagetitle": "Fotos",
+  "who.i.am": "Sou um cientista da computação louco, mas com diploma de bacharel \\o/"
 }
